PKW-02: fixed header element alignment

--- a/styles/style.css
+++ b/styles/style.css
@@ -2,10 +2,18 @@
   background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgb(252,255,122)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
 }
 
+.header{
+  display: inline-block;
+  margin-top: 20px;
+}
+
 .heading{
-  color:#ffffff; 
-  margin: auto;
+  color:#ffffff;
   display: inline-block;
   font-size: 2em;
   font-family: 'Open Sans Condensed', sans-serif;
+}
+
+.subheading{
+  color: #fcff7a;
 }
